--- a/desafios/desafio_02/style.css
+++ b/desafios/desafio_02/style.css
@@ -132,12 +132,13 @@ aside h3 {
     background-color: #2FA866;
     color: white;
     padding: 12px;
-    margin: 0;
+    margin: 0px;
     border-radius: 15px 15px 0px 0px;
 }
 
 aside p {
-    padding-left: 10px;
+    padding: 0px 15px 0px 15px;
+    
 }
 
 aside ul {
