--- a/desafios/cordel-moderno/style.css
+++ b/desafios/cordel-moderno/style.css
@@ -22,6 +22,7 @@ header h1 {
     font-weight: normal;
     font-size: 10vw;
     padding-top: 50px;
+    font-variant: small-caps;
 }
 
 header p {
