--- a/desafios/rede-social/style.css
+++ b/desafios/rede-social/style.css
@@ -5,16 +5,25 @@
     padding: 0;
 }
 
-body {
+main {
     background: black url(pacote-d013/imagens/fundo-madeira.jpg) center center no-repeat fixed;
-    background-size: 100% 100%;
-    display: flex;
-    justify-content: space-between;
+    background-size: cover;
+    position: relative;
+    height: 100vh;
 }
 
 .logo img{
     height: 50px;
-    border-radius: 100%;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.507);
+    box-sizing: border-box;
+}
+
+.logo img:hover {
+    border: 2px solid rgba(255, 255, 255, 0.507);
+    transform: translate(-3px, -3px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.438);
+    transition: transform .3s;
 }
 
 div.logo {
@@ -26,30 +35,31 @@ div.logo {
     padding-right: 20px;
 }
 
-div.container {
-    display: flex;
-    justify-content: space-around;
-}
+section#iphone {
+    height: 624px;
+    width: 311px;
+    background: url('pacote-d013/imagens/frame-iphone.png');
 
-.iphone {
-    position: relative;
-}
-
-.iframe {
     position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
-iframe {
-    width: 268px;
-    height: 485px;
-    border-radius: 10px;
-    
+#iphone iframe {
+    position: absolute;
+    top: 80px;
+    left: 22px;
+    width: 267px;
+    height: 471px;
 }
+
+section#container {
+    position: absolute;
+    top: 2%;
+    left: 92%;
+}
+
+
+
 
