--- a/exercícios/ex-011/mq005/estilo/style.css
+++ b/exercícios/ex-011/mq005/estilo/style.css
@@ -7,7 +7,7 @@
 }
 
 header {
-    background-color: rgb(131, 131, 131);
+    background-color: rgb(104, 104, 104);
     
 }
 
@@ -17,27 +17,27 @@ h1 {
     color: white;
 }
 
-ul {
-    display: flex;
-}
-
 li {
+    display: block;
     list-style-type: none;
-    margin: 3px;
-    padding: 3px 5px;
+    padding: 3px;
     background-color: rgb(61, 61, 61);
-    border-radius: 0px;
-    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.199);
+    text-align: center;
+    border-top: 2px solid grey;
 }
 
-a {
+menu a {
     color: white;
     text-decoration: none;
 }
 
+menu li:hover {
+    background-color: rgb(165, 165, 165);
+}
+
 main {
-    width: 600px;
     margin: auto;
+    width: 90vw;
 }
 
 main h2 {
@@ -47,7 +47,8 @@ main h2 {
 
 main p {
     text-align: justify;
-    padding: 5px;
+    margin-top: 20px;
+    text-indent: 20px;
 }
 
 
