--- a/exercícios/ex-011/mq005/estilo/style.css
+++ b/exercícios/ex-011/mq005/estilo/style.css
@@ -26,6 +26,19 @@ li {
     border-top: 2px solid grey;
 }
 
+span#icone-menu {
+    display: block;
+    background-color: rgb(41, 41, 41);
+    color: white;
+    text-align: center;
+    padding: 5px;
+}
+
+span#icone-menu:hover {
+    background-color: rgb(233, 232, 232);
+    color: rgb(61, 61, 61);
+}
+
 menu a {
     color: white;
     text-decoration: none;
