--- a/exercícios/ex-011/mq005/estilo/style.css
+++ b/exercícios/ex-011/mq005/estilo/style.css
@@ -39,6 +39,10 @@ span#icone-menu:hover {
     color: rgb(61, 61, 61);
 }
 
+menu {
+    display: none;
+}
+
 menu a {
     color: white;
     text-decoration: none;
