--- a/desafios/login/estilos/geral.css
+++ b/desafios/login/estilos/geral.css
@@ -28,7 +28,7 @@ section {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, 10%);
+    transform: translate(-50%, 50%);
 
     border: 1px solid #8f7d8b;
     border-radius: 20px;
@@ -53,9 +53,7 @@ section {
 
 form {
     margin: 15px;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+    text-align: center;
 }
 
 form div {
@@ -67,7 +65,8 @@ form div {
     border-radius: 10px;
     background-color: rgb(0, 78, 122);
     width: max-content;
-    color: white; 
+    color: white;
+    margin: 5px auto;
 }
 
 .dados-login label {
