--- a/desafios/login/estilos/geral.css
+++ b/desafios/login/estilos/geral.css
@@ -8,7 +8,13 @@
 * {
     margin: 0px;
     padding: 0px;
+    box-sizing: border-box;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+html, body, main {
+    height: 100vh;
+    width: 100vw;
 }
 
 body {
@@ -28,15 +34,20 @@ section {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, 50%);
+    transform: translate(-50%, -50%);
 
+    height: 500px;
+    width: 350px;
     border: 1px solid #8f7d8b;
     border-radius: 20px;
-
     background-color: #007ABF;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.404);
 }
 
-#foto img {
+#foto {
+    background: #002f4b url('../imagens/foto.jpg') no-repeat;
+    background-size: cover;
+    height: 250px;
     border: 1px solid #D8BDD2;
     border-radius: 20px;
 }
