--- a/desafios/login/estilos/tablet.css
+++ b/desafios/login/estilos/tablet.css
@@ -3,20 +3,20 @@
 /* ESTILO TABLET */
 
 section {
-    display: flex;
-    justify-content: center;
-    width: 80vw;
-    height: 50vh;
+    width: 90vw;
 }
 
-#foto img {
-    width: 100%;
+#foto {
+    width: 40%;
     height: 100%;
+    float: left;
 }
 
 #login {
+    width: 60%;
     height: 100%;
     margin: 5% 0px;
+    float: right;
 }
 
 
