--- a/desafios/login/estilos/geral.css
+++ b/desafios/login/estilos/geral.css
@@ -22,10 +22,6 @@ body {
     background-attachment: fixed;
 }
 
-#foto, #foto img, #login {
-    width: 70vw;
-}
-
 main {
     position: relative;
 }
@@ -37,29 +33,35 @@ section {
     transform: translate(-50%, -50%);
 
     height: 500px;
-    width: 350px;
+    width: 250px;
     border: 1px solid #8f7d8b;
     border-radius: 20px;
     background-color: #007ABF;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.404);
+
+    overflow: hidden;
+    transition: width .3s, height .3s;
+    transition-timing-function: ease;
 }
 
 #foto {
     background: #002f4b url('../imagens/foto.jpg') no-repeat;
     background-size: cover;
-    height: 250px;
+    height: 200px;
     border: 1px solid #D8BDD2;
     border-radius: 20px;
+    display: block;
 }
 
 #login {
-    text-align: center;
+    display: block;
 }
 
 #login h1, p {
     margin: 5px 0px;
     color: white;
     text-shadow: 1px 1px 2px black;
+    text-align: center;
 }
 
 form {
@@ -97,8 +99,10 @@ form div {
 
 #submit input {
     border: 1px solid #002f4b;
+    border-radius: 8px;
     padding: 5px;
     color: white;
     background-color: #002f4b;
+    margin-top: 5px;
 }
 
