--- a/desafios/login/estilos/pc.css
+++ b/desafios/login/estilos/pc.css
@@ -4,17 +4,18 @@
 
 section {
     width: 900px;
+    height: 350px;
 }
 
 #foto {
     width: 50%;
     height: 100%;
-    float: left;
+    float: right;
 }
 
 #login {
     width: 50%;
     height: 100%;
     margin: 5% 0px;
-    float: right;
+    float: left;
 }
