--- a/desafios/login/estilos/tablet.css
+++ b/desafios/login/estilos/tablet.css
@@ -4,6 +4,7 @@
 
 section {
     width: 90vw;
+    height: 320px;
 }
 
 #foto {
@@ -15,7 +16,7 @@ section {
 #login {
     width: 60%;
     height: 100%;
-    margin: 5% 0px;
+    margin-top: 20px;
     float: right;
 }
 
